@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IBattlefield.cs" />
     <Compile Include="Interfaces\IRandomNumberGenerator.cs" />
     <Compile Include="Models\Battlefield.cs" />
     <Compile Include="BattlefieldApp.cs" />
