@@ -28,3 +28,4 @@
 *F: Added additional documentation; replaced do-while loops with while loops
 *S: Finished testing Pattern Factory
 *N: Fix Pattern Factory GenerateFifthDetonationPattern Test; add Battlefield tests;
+*F: Extracted an interface for the battlefield
